org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/ConnectionUsage_Invalid.sysml.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.invalid.SysMLInvalidationTests
	ResourceSet {
		ThisFile {}
		File {from ="/library.kernel/Base.kerml"}
		File {from ="/library.kernel/Occurrences.kerml"}
       	File {from ="/library.kernel/Objects.kerml"}
       	File {from ="/library.kernel/Performances.kerml"}
		File {from ="/library.kernel/BaseFunctions.kerml"}
		File {from ="/library.systems/Blocks.sysml"}

	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library.kernel/Base.kerml"}
				File {from ="/library.kernel/Occurrences.kerml"}
 		      	File {from ="/library.kernel/Objects.kerml"}
 		      	File {from ="/library.kernel/Performances.kerml"}
				File {from ="/library.kernel/BaseFunctions.kerml"}
				File {from ="/library.systems/Blocks.sysml"}
			}
		}
	}
END_SETUP 
*/
package P {
	block ABlock;	block B;	block C;	block D;	block E;
	
	interface def AA;
	assoc block AB {
		end : D[1];
		end : E[1];
	}
	assoc block BC {
		end : B[1];
		end : C[1];
	}
	part apart : ABlock {
		part b : B[1];
		part c: C[1];
		
		link ab : AB connect b to c;
		link bc : AB, BC connect b to c;
		link :AA connect b to c;
		
		// XPECT errors --> "A connection must be typed by association blocks." at ":ABlock connect b to c;"
		link :ABlock connect b to c;
		// XPECT errors --> "A connection must be typed by association blocks." at ":apart connect b to c;"
		link :apart connect b to c;
	}
	
	
}

